--- a/static/css/style.css
+++ b/static/css/style.css
@@ -690,6 +690,121 @@
   }
   
   .banner-btn:hover { background: var(--sub-main); }
+
+
+
+   /*-----------------------------------*\
+    #CART
+  \*-----------------------------------*/
+
+  .cart {
+    position: fixed;
+    top: 0;
+    right: 0;
+    /*right: -100%;*/
+    width: 360px;
+    height: 100vh;
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding: 20px;
+    background: var(--sub-white);
+    box-shadow: -2px solid 4px hsla(0, 4%, 15% / 10%);
+    transition: var(--transition-timing);
+    z-index: 5;
+  }
+
+  .cart.active {
+    right: 0;
+    transition: .5s;
+  }
+
+  .cart-title {
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-top: 2rem;
+  }
+
+  .cart-box {
+    display: grid;
+    grid-template-columns: 32% 50% 18%;
+    align-items: center;
+    gap: 1rem;
+    margin-top: 1rem;
+   }
+
+   .cart-img {
+    width: 100px;
+    height: 100px;
+    object-fit: contain;
+    padding: 10px;
+   }
+
+   .detail-box {
+    display: grid;
+    row-gap: .5rem;
+   }
+
+   .cart-product-title {
+    font-size: 1rem;
+    text-transform: uppercase;
+   }
+
+   .cart-price {
+    font-weight: 500;
+   }
+
+   .cart-quantity {
+    border: 1px solid var(--white);
+    outline-color: var(--main-color);
+    width: 2.4rem;
+    text-align: center;
+    font-size: 1rem;
+   }
+
+   .cart-remove {
+    font-size: 24px;
+    color: var(--main-color);
+    cursor: pointer;
+   }
+
+   .total {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 1.5rem;
+    border-top: 1px solid var(--black);
+   }
+
+   .total-title {
+    font-size: 1rem;
+    font-weight: 600;
+   }
+
+   .total-price {
+    margin-left: .5rem;
+   }
+   
+   .btn-buy {
+    display: flex;
+    margin: 1.5rem auto 0 auto;
+    padding: 12px 20px;
+    background: var(--main-color);
+    color: var(--white);
+    font-size: 1rem;
+    font-weight: 500;
+   }
+
+   .btn-buy:hover {
+    background: var(--sub-main);
+   }
+
+   .cart-close {
+    position: absolute;
+    top: 1rem;
+    right: .8rem;
+    font-size: 2rem;
+    cursor: pointer;
+   }
   
   
   
