--- a/templates/pages/Admin.html
+++ b/templates/pages/Admin.html
@@ -1,12 +1,274 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin DashBoard</title>
+    
+    <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <link rel="stylesheet" href="/static/css/Admin.css">
 </head>
 <body>
-    
+    <div class="container">
+        <aside>
+            <div class="top">
+                <div class="logo">
+                    <span class="danger">WilShopping</span>
+                </div>
+                <div class="close" id="close-btn"><i class="fa-solid fa-times"></i></div>
+            </div>
+            <div class="sidebar">
+                <a href="#" class="active">
+                    <i class="fa-solid fa-house"></i>
+                    <h3>Dashboard</h3>
+                </a>
+                <a href="#">
+                    <i class="fa-solid fa-users"></i>
+                    <h3>Customers</h3>
+                </a>
+                <a href="#">
+                    <i class="fa-solid fa-user"></i>
+                    <h3>Profile</h3>
+                </a>
+                <a href="#">
+                    <i class="fa-solid fa-question"></i>
+                    <h3>Help</h3>
+                </a>
+                <a href="#">
+                    <i class="fa-solid fa-gear"></i>
+                    <h3>Settings</h3>
+                </a>
+            </div>
+        </aside>
+        <!---End Aside-->
+        <main>
+            <h1>Dashboard</h1>
+            <div class="date">
+                <input type="date">
+            </div>
+
+            <div class="insights">
+                <div class="sales">
+                    <i class="fa-solid fa-chart-area"></i>
+                    <div class="middle">
+                        <div class="right">
+                            <h3>Total Product</h3>
+                            <h1>25000</h1>
+                        </div>
+                        <div class="progress">
+                            <svg>
+                                <circle cx="38" cy="38" r="36"></circle>
+                            </svg>
+                            <div class="number">
+                                <p>81%</p>
+                            </div>
+                        </div>
+                    </div>
+                    <small class="text-muted">Last 24 Hours</small>
+                </div>
+                <!-----------------End Of Sales---------------------->
+                <div class="expenses">
+                    <i class="fa-solid fa-chart-simple"></i>
+                    <div class="middle">
+                        <div class="left">
+                            <h3>Total Expenses</h3>
+                            <h1>$14,160</h1>
+                        </div>
+                        <div class="progress">
+                            <svg>
+                                <circle cx="38" cy="38" r="36"></circle>
+                            </svg>
+                            <div class="number">
+                                <p>62%</p>
+                            </div>
+                        </div>
+                    </div>
+                    <small class="text-muted">Last 24 Hours</small>
+                </div>
+                <!-----------------End Of Expenses---------------------->
+                <div class="icome">
+                    <i class="fa-solid fa-chart-line"></i>
+                    <div class="middle">
+                        <div class="left">
+                            <h3>Total Icome</h3>
+                            <h1>$10,864</h1>
+                        </div>
+                        <div class="progress">
+                            <svg>
+                                <circle cx="38" cy="38" r="36"></circle>
+                            </svg>
+                            <div class="number">
+                                <p>44%</p>
+                            </div>
+                        </div>
+                    </div>
+                    <small class="text-muted">Last 24 Hours</small>
+                </div>
+                <!-----------------End Of Icome---------------------->
+            </div>
+            <div class="recent-orders">
+                <h2>Recent Orders</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Product_Name</th>
+                            <th>about_product</th>
+                            <th>Description</th>
+                            <th>image_name</th>
+                            <th>Quantity</th>
+                            <th>Category</th>
+                            <th>Price</th>
+                            <th>Create_at</th>
+                            <th>Option</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>name</td>
+                        <td>about</td>
+                        <td>description</td>
+                        <td>image</td>
+                        <td>quantity</td>
+                        <td>category</td>
+                        <td>price</td>
+                        <td>created_at</td>
+                        <td><i class="fa-solid fa-edit"></i> <i class="fa-solid fa-trash"></i></td>
+                    </tr>
+                    <tr>
+                        <td>name</td>
+                        <td>about</td>
+                        <td>description</td>
+                        <td>image</td>
+                        <td>quantity</td>
+                        <td>category</td>
+                        <td>price</td>
+                        <td>created_at</td>
+                        <td><i class="fa-solid fa-edit"></i> <i class="fa-solid fa-trash"></i></td>
+                    </tr>
+                    <tr>
+                        <td>name</td>
+                        <td>about</td>
+                        <td>description</td>
+                        <td>image</td>
+                        <td>quantity</td>
+                        <td>category</td>
+                        <td>price</td>
+                        <td>created_at</td>
+                        <td><i class="fa-solid fa-edit"></i> <i class="fa-solid fa-trash"></i></td>
+                    </tr>
+                    <tr>
+                        <td>name</td>
+                        <td>about</td>
+                        <td>description</td>
+                        <td>image</td>
+                        <td>quantity</td>
+                        <td>category</td>
+                        <td>price</td>
+                        <td>created_at</td>
+                        <td><i class="fa-solid fa-edit"></i> <i class="fa-solid fa-trash"></i></td>
+                    </tr>
+                    </tbody>
+                </table>
+                <a href="#">Show All</a>
+            </div>
+        </main>
+        <!------------------ END MAIN ---------------------->
+        <div class="right">
+            <div class="top">
+                <button id="menu-btn">
+                    <i class="fa-solid fa-bars"></i>
+                </button>
+                <div class="theme-toggler">
+                    <i class="fa-solid fa-sun active"></i>
+                    <i class="fa-solid fa-moon"></i>
+                </div>
+                <div class="profile">
+                    <div class="info">
+                        <p>Hey,<b>Wilfred Tonye</b></p>
+                        <small class="text-muted">Admin</small>
+                    </div>
+                    <div class="profile-photo">
+                        <img src="/WilfredTonye.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <!----------------------- END TOP -------------------->
+            <div class="recent-products">
+                <h2>Recent Products</h2>
+                <div class="products">
+                    <div class="product">
+                        <div class="product-photo">
+                            <img src="/WilfredTonye.jpg" alt="">
+                        </div>
+                        <div class="message">
+                            <p><b>Product Title</b> Add by Wilfred Tonye</p>
+                            <small class="text-muted">2 Minutes Ago</small>
+                        </div>
+                    </div>
+                    <div class="product">
+                        <div class="product-photo">
+                            <img src="/WilfredTonye.jpg" alt="">
+                        </div>
+                        <div class="message">
+                            <p><b>Product Title</b> Add by Wilfred Tonye</p>
+                            <small class="text-muted">2 Minutes Ago</small>
+                        </div>
+                    </div>
+                    <div class="product">
+                        <div class="product-photo">
+                            <img src="/WilfredTonye.jpg" alt="">
+                        </div>
+                        <div class="message">
+                            <p><b>Product Title</b> Add by Wilfred Tonye</p>
+                            <small class="text-muted">2 Minutes Ago</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!------------------- END RECENT PRODUCTS -------------------->
+            <div class="sales-analytics">
+                <h2>Sales Analytics</h2>
+                <div class="item online">
+                    <div class="icon">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                    </div>
+                    <div class="right">
+                        <div class="info">
+                            <h3>ONLINE ORDERS</h3>
+                            <small class="text-muted">Last 24 Hours</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="item offline">
+                    <div class="icon">
+                        <i class="fa-solid fa-bag-shopping"></i>
+                    </div>
+                    <div class="right">
+                        <div class="info">
+                            <h3>OFFLINE ORDERS</h3>
+                            <small class="text-muted">Last 24 Hours</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="item customers">
+                    <div class="icon">
+                        <i class="fa-solid fa-user"></i>
+                    </div>
+                    <div class="right">
+                        <div class="info">
+                            <h3>NEW CUSTOMERS</h3>
+                            <small class="text-muted">Last 24 Hours</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="item add-product">
+                    <div>
+                        <i class="fa-solid fa-add"></i>
+                        <h3>Add Product</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+<script src="js/script.js"></script>
+
 </html>
