--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -848,6 +848,38 @@
 
 
 
+
+
+    <!--
+      - CART
+    -->
+
+    <div class="cart">
+      <h2 class="cart-title">Your Cart</h2>
+
+      <div class="cart-content">
+        <div class="cart-box">
+          <img src="/static/img/products/clothes-1.jpg" alt="" class="cart-img">
+          <div class="detail-box">
+            <div class="cart-product-title">product-name</div>
+            <div class="cart-price">2500FCFA</div>
+            <input type="number" name="number" value="1" class="cart-quantity">
+          </div>
+          <ion-icon name="trash-outline" class="cart-remove"></ion-icon>
+        </div>
+      </div>
+
+      <div class="total">
+        <div class="total-title">Total</div>
+        <div class="total-price">0FCFA</div>
+      </div>
+      <button type="button" class="btn-buy"> Acheter Maintenant</button>
+      <ion-icon name="close-outline" class="cart-close"></ion-icon>
+    </div>
+
+
+
+
     <!--
       - CATEGORY
     -->
@@ -2390,7 +2422,7 @@
                       <ion-icon name="repeat-outline"></ion-icon>
                     </button>
 
-                    <button class="btn-action">
+                    <button class="btn-action" id="btn-add">
                       <ion-icon name="bag-add-outline"></ion-icon>
                     </button>
 
@@ -2446,7 +2478,7 @@
                       <ion-icon name="repeat-outline"></ion-icon>
                     </button>
               
-                    <button class="btn-action">
+                    <button class="btn-action" id="btn-add">
                       <ion-icon name="bag-add-outline"></ion-icon>
                     </button>
                   </div>
@@ -2497,7 +2529,7 @@
                       <ion-icon name="repeat-outline"></ion-icon>
                     </button>
               
-                    <button class="btn-action">
+                    <button class="btn-action" id="btn-add">
                       <ion-icon name="bag-add-outline"></ion-icon>
                     </button>
                   </div>
@@ -2550,7 +2582,7 @@
                       <ion-icon name="repeat-outline"></ion-icon>
                     </button>
               
-                    <button class="btn-action">
+                    <button class="btn-action" id="btn-add">
                       <ion-icon name="bag-add-outline"></ion-icon>
                     </button>
                   </div>
@@ -2601,7 +2633,7 @@
                       <ion-icon name="repeat-outline"></ion-icon>
                     </button>
               
-                    <button class="btn-action">
+                    <button class="btn-action" id="btn-add">
                       <ion-icon name="bag-add-outline"></ion-icon>
                     </button>
                   </div>
@@ -2654,7 +2686,7 @@
                       <ion-icon name="repeat-outline"></ion-icon>
                     </button>
               
-                    <button class="btn-action">
+                    <button class="btn-action" id="btn-add">
                       <ion-icon name="bag-add-outline"></ion-icon>
                     </button>
                   </div>
@@ -2704,7 +2736,7 @@
                       <ion-icon name="repeat-outline"></ion-icon>
                     </button>
               
-                    <button class="btn-action">
+                    <button class="btn-action" id="btn-add">
                       <ion-icon name="bag-add-outline"></ion-icon>
                     </button>
                   </div>
@@ -2757,7 +2789,7 @@
                       <ion-icon name="repeat-outline"></ion-icon>
                     </button>
               
-                    <button class="btn-action">
+                    <button class="btn-action" id="btn-add">
                       <ion-icon name="bag-add-outline"></ion-icon>
                     </button>
                   </div>
@@ -2808,7 +2840,7 @@
                       <ion-icon name="repeat-outline"></ion-icon>
                     </button>
               
-                    <button class="btn-action">
+                    <button class="btn-action" id="btn-add">
                       <ion-icon name="bag-add-outline"></ion-icon>
                     </button>
                   </div>
@@ -2861,7 +2893,7 @@
                       <ion-icon name="repeat-outline"></ion-icon>
                     </button>
               
-                    <button class="btn-action">
+                    <button class="btn-action" id="btn-add">
                       <ion-icon name="bag-add-outline"></ion-icon>
                     </button>
                   </div>
@@ -2912,7 +2944,7 @@
                       <ion-icon name="repeat-outline"></ion-icon>
                     </button>
               
-                    <button class="btn-action">
+                    <button class="btn-action" id="btn-add">
                       <ion-icon name="bag-add-outline"></ion-icon>
                     </button>
                   </div>
@@ -2965,7 +2997,7 @@
                       <ion-icon name="repeat-outline"></ion-icon>
                     </button>
               
-                    <button class="btn-action">
+                    <button class="btn-action" id="btn-add">
                       <ion-icon name="bag-add-outline"></ion-icon>
                     </button>
                   </div>
